RESOLVED FIXED297203
REGRESSION(298491@main): [Linux] CSSPrimitiveData.h:249:11: error: invalid use of non-static data member ‘WebCore::CSS::PrimitiveNumericRaw<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}, WebCore::CSS::LengthPercentageUnit, float>::va
https://bugs.webkit.org/show_bug.cgi?id=297203
Summary REGRESSION(298491@main): [Linux] CSSPrimitiveData.h:249:11: error: invalid us...
Fujii Hironori
Reported 2025-08-10 21:32:30 PDT
REGRESSION(298491@main): [Linux] CSSPrimitiveData.h:249:11: error: invalid use of non-static data member ‘WebCore::CSS::PrimitiveNumericRaw<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}, WebCore::CSS::LengthPercentageUnit, float>::value’ Buildbot: builder GTK-Linux-64-bit-Release-Ubuntu-2204-Build build 9678 https://build.webkit.org/#/builders/1059/builds/9678 [8/632] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/WebCore/DerivedSources/unified-sources/UnifiedSource-be65d27a-18.cpp.o FAILED: Source/WebCore/CMakeFiles/WebCore.dir/__/__/WebCore/DerivedSources/unified-sources/UnifiedSource-be65d27a-18.cpp.o /bin/ccache /usr/lib/ccache/c++ [...] -c /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/WebKitBuild/GTK/Release/WebCore/DerivedSources/unified-sources/UnifiedSource-be65d27a-18.cpp In file included from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveNumeric.h:27, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveNumericTypes.h:29, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveNumericTypes+EvaluateCalc.h:28, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/color/CSSColorDescriptors.h:29, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/color/CSSColor.h:29, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/images/CSSGradient.h:29, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/shapes/CSSCircleFunction.h:27, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/shapes/CSSBasicShape.h:27, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/style/values/shapes/StyleBasicShape.h:27, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/shapes/LayoutShape.h:34, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/shapes/ShapeOutsideInfo.h:32, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/rendering/RenderBox.h:32, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/dom/NodeInlines.h:30, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/style/Styleable.h:29, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/dom/ViewTransition.h:34, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/dom/PageRevealEvent.h:29, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/dom/PageRevealEvent.cpp:27, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/WebKitBuild/GTK/Release/WebCore/DerivedSources/unified-sources/UnifiedSource-be65d27a-18.cpp:3: /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveData.h: In substitution of ‘template<class auto:363> requires ValidKeywordForList<auto:363, WebCore::CSS::PrimitiveKeywordList<Ks ...> > constexpr WebCore::CSS::PrimitiveDataIndex<WebCore::CSS::PrimitiveNumeric<WebCore::CSS::LengthPercentageRaw<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}, float> > >::PrimitiveDataIndex(auto:363) [with auto:363 = WebCore::CSS::PrimitiveNumeric<WebCore::CSS::LengthPercentageRaw<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}, float> >]’: /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveData.h:249:11: required from ‘WebCore::CSS::PrimitiveData<N, Ks>::PrimitiveData(Raw) [with N = WebCore::CSS::PrimitiveNumeric<WebCore::CSS::LengthPercentageRaw<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}, float> >; Ks = {}; Raw = WebCore::CSS::LengthPercentageRaw<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}, float>]’ /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveNumeric.h:87:11: required from ‘constexpr WebCore::CSS::PrimitiveNumeric< <template-parameter-1-1> >::PrimitiveNumeric(WebCore::CSS::ValueLiteral<unitValue>) requires requires{{Raw(WebCore::CSS::PrimitiveNumeric< <template-parameter-1-1> >::__ct ::value)};} [with E = WebCore::CSS::LengthUnit; E unitValue = WebCore::CSS::LengthUnit::Px; RawType = WebCore::CSS::LengthPercentageRaw<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}, float>]’ /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveNumeric.h:249:17: required from ‘constexpr WebCore::SpaceSeparatedArray<T, N>::SpaceSeparatedArray(Ts ...) [with Ts = {WebCore::CSS::ValueLiteral<WebCore::CSS::LengthUnit::Px>, WebCore::CSS::ValueLiteral<WebCore::CSS::LengthUnit::Px>, WebCore::CSS::ValueLiteral<WebCore::CSS::LengthUnit::Px>, WebCore::CSS::ValueLiteral<WebCore::CSS::LengthUnit::Px>}; T = WebCore::CSS::LengthPercentage<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}>; long unsigned int N = 4]’ /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/borders/CSSBorderRadius.h:68:5: required from here /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveData.h:249:11: error: invalid use of non-static data member ‘WebCore::CSS::PrimitiveNumericRaw<WebCore::CSS::Range{0.0, +Inf, WebCore::CSS::RangeOptions::Default}, WebCore::CSS::LengthPercentageUnit, float>::value’ 249 | , index { raw } | ^~~~~~~~~~~~~ In file included from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveKeywordList.h:28, from /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveData.h:27: /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2204-Build/build/Source/WebCore/css/values/primitives/CSSPrimitiveNumericRaw.h:50:12: note: declared here 50 | double value; | ^~~~~
Attachments
repro.cpp (540 bytes, text/x-c++src)
2025-08-11 04:11 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2025-08-11 03:01:08 PDT
290410@main fixed this problem, and 298491@main reverted the fix.
Fujii Hironori
Comment 2 2025-08-11 04:11:21 PDT
Created attachment 476347 [details] repro.cpp GCC 13 fixed the compiler problem. https://godbolt.org/z/YG4qWdcYd
Fujii Hironori
Comment 3 2025-08-11 04:46:52 PDT
EWS
Comment 4 2025-08-12 05:07:25 PDT
Committed 298558@main (0933fd2120fa): <https://commits.webkit.org/298558@main> Reviewed commits have been landed. Closing PR #49212 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.