REGRESSION(298491@main): [CSS] GCC<13 can't compile ValidKeywordForList https://bugs.webkit.org/show_bug.cgi?id=297203

Reviewed by Carlos Alberto Lopez Perez.

<https://commits.webkit.org/298491@main> inadvertently reverted
<https://commits.webkit.org/290410@main> fix. Restored the fix with a
compiler version check.

* Source/WebCore/css/values/primitives/CSSPrimitiveKeywordList.h:

Canonical link: https://commits.webkit.org/298558@main